// Vitest Snapshot v1

exports[`BackTop Component > props.content works fine 1`] = `
<div
  class="t-is-fixed t-back-top t-back-top--square"
  style="right: 24px; bottom: 80px; display: none;"
>
  <svg
    class="t-icon t-icon-backtop"
    fill="none"
    height="1em"
    viewBox="0 0 16 16"
    width="1em"
  >
    <path
      d="M2 3h12V2H2v1zM3.38 10.23l4.1-4.03v8.64H8.5V6.2l4.18 4.08.71-.7-5.05-4.93a.5.5 0 00-.7 0l-4.98 4.9.72.69z"
      fill="currentColor"
      fill-opacity="0.9"
    />
  </svg>
  <div
    class="t-back-top__text"
  >
    <span
      class="custom-node"
    >
      TNode
    </span>
  </div>
</div>
`;

exports[`BackTop Component > props.default works fine 1`] = `
<div
  class="t-is-fixed t-back-top t-back-top--square"
  style="right: 24px; bottom: 80px; display: none;"
>
  <svg
    class="t-icon t-icon-backtop"
    fill="none"
    height="1em"
    viewBox="0 0 16 16"
    width="1em"
  >
    <path
      d="M2 3h12V2H2v1zM3.38 10.23l4.1-4.03v8.64H8.5V6.2l4.18 4.08.71-.7-5.05-4.93a.5.5 0 00-.7 0l-4.98 4.9.72.69z"
      fill="currentColor"
      fill-opacity="0.9"
    />
  </svg>
  <div
    class="t-back-top__text"
  >
    <span
      class="custom-node"
    >
      TNode
    </span>
  </div>
</div>
`;

exports[`BackTop Component > props.shape is equal to circle 1`] = `
<div
  class="t-is-fixed t-back-top t-back-top--circle"
  style="right: 24px; bottom: 80px; display: none;"
>
  <svg
    class="t-icon t-icon-backtop"
    fill="none"
    height="1em"
    viewBox="0 0 16 16"
    width="1em"
  >
    <path
      d="M2 3h12V2H2v1zM3.38 10.23l4.1-4.03v8.64H8.5V6.2l4.18 4.08.71-.7-5.05-4.93a.5.5 0 00-.7 0l-4.98 4.9.72.69z"
      fill="currentColor"
      fill-opacity="0.9"
    />
  </svg>
  <div
    class="t-back-top__text"
  >
    <!---->
  </div>
</div>
`;

exports[`BackTop Component > props.shape is equal to square 1`] = `
<div
  class="t-is-fixed t-back-top t-back-top--square"
  style="right: 24px; bottom: 80px; display: none;"
>
  <svg
    class="t-icon t-icon-backtop"
    fill="none"
    height="1em"
    viewBox="0 0 16 16"
    width="1em"
  >
    <path
      d="M2 3h12V2H2v1zM3.38 10.23l4.1-4.03v8.64H8.5V6.2l4.18 4.08.71-.7-5.05-4.93a.5.5 0 00-.7 0l-4.98 4.9.72.69z"
      fill="currentColor"
      fill-opacity="0.9"
    />
  </svg>
  <div
    class="t-back-top__text"
  >
    <!---->
  </div>
</div>
`;

exports[`BackTop Component > slots.content works fine 1`] = `
<div
  class="t-is-fixed t-back-top t-back-top--square"
  style="right: 24px; bottom: 80px; display: none;"
>
  <svg
    class="t-icon t-icon-backtop"
    fill="none"
    height="1em"
    viewBox="0 0 16 16"
    width="1em"
  >
    <path
      d="M2 3h12V2H2v1zM3.38 10.23l4.1-4.03v8.64H8.5V6.2l4.18 4.08.71-.7-5.05-4.93a.5.5 0 00-.7 0l-4.98 4.9.72.69z"
      fill="currentColor"
      fill-opacity="0.9"
    />
  </svg>
  <div
    class="t-back-top__text"
  >
    
    <span
      class="custom-node"
    >
      TNode
    </span>
    
  </div>
</div>
`;

exports[`BackTop Component > slots.default works fine 1`] = `
<div
  class="t-is-fixed t-back-top t-back-top--square"
  style="right: 24px; bottom: 80px; display: none;"
>
  <svg
    class="t-icon t-icon-backtop"
    fill="none"
    height="1em"
    viewBox="0 0 16 16"
    width="1em"
  >
    <path
      d="M2 3h12V2H2v1zM3.38 10.23l4.1-4.03v8.64H8.5V6.2l4.18 4.08.71-.7-5.05-4.93a.5.5 0 00-.7 0l-4.98 4.9.72.69z"
      fill="currentColor"
      fill-opacity="0.9"
    />
  </svg>
  <div
    class="t-back-top__text"
  >
    
    <span
      class="custom-node"
    >
      TNode
    </span>
    
  </div>
</div>
`;
